<resources>
    <string name="app_name">RU_Foody</string>
    <string name="home">Home</string>
    <string name="RUFoody">RUFoody</string>
    <string name="order_now">Order Now</string>
    <string name="signup">SignUp</string>
    <string name="sua">Connect As</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_with_email">Login with Email</string>
    <string name="sign_with_phone">Login with Phone</string>
    <string name="dhaa">Don\'t Have an Account?</string>
    <string name="chef">Chef</string>
    <string name="customer">Customer</string>
    <string name="delivery">Delivery Person</string>

    <string name="register_chef">Register As Chef</string>
    <string name="first">Full Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="back">back</string>
    <string name="Reg_in_progress">"Registration in Progress, Please Wait…</string>

    <string name="delivery_person">Register as Delivery Person</string>
    <string name="reg_customer">Register as Customer</string>

    <string name="login_email">Login With Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dhaac">Don\'t Have an Account? Create</string>

    <string name="otp">Send OTP</string>
    <string name="lwn">Login with Mobile Number</string>
    <string name="eotp">Enter The OTP</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend the Code</string>
    <string name="Otp">Enter The OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="post_dish">Post Dish</string>
    <string name="dishName">Dish Name</string>
    <string name="post">Post</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="image_upload">image upload</string>

    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>

    <string name="pending">Pending Orders</string>
    <string name="ship">Ship Orders</string>
    <string name="burger">Burger</string>
    <string name="priceMoney">Price: Ksh300</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="dish_name_format">Dish Name: %s</string>


    <string-array name="DishName">
        <item>Thepla</item>
        <item>Dal Rice</item>
        <item>Dhokla</item>
        <item>Sabji Roti</item>
        <item>Kadhi Khichdi</item>
        <item>Puri bhaji</item>
        <item>Dal Dhokdi</item>
        <item>Undhiyu</item>
        <item>Aloo Paratha</item>
        <item>Patra</item>
        <item>Khandvi</item>
        <item>Gulab Jamun</item>
        <item>SevTomato bhakri</item>
        <item>Shrikhand</item>
        <item>Palak Paneer</item>
        <item>Khulcha</item>
        <item>Makki di roti</item>
        <item>Gobi Partha</item>
        <item>Biryani</item>
        <item>Rajma</item>
        <item>Bhindi Fry</item>
        <item>Dum Biryani</item>
        <item>Rumali roti</item>
        <item>Dal Makhni</item>
        <item>Samosa</item>
        <item>Kachori</item>
        <item>Menduwada</item>
        <item>Pulav</item>
        <item>Pav Bhaji</item>
        <item>Misal Pav</item>
        <item>Mix Vegetable</item>
        <item>Muffins</item>
        <item>DalFry JerraRice</item>
        <item>Bengali sweet</item>
        <item>Puranpoli</item>
        <item>Egg Curry</item>
        <item>Pomfret Fish</item>
        <item>Egg Bhurji</item>
        <item>Dum chicken</item>
        <item>Hyderabadi Chicken Biryni</item>
    </string-array>

    <string-array name="shipper">
        <item>Shipper 1</item>
        <item>Shipper 2</item>
    </string-array>


</resources>