<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/RUFoody"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="20sp"/>

        <Button
            android:id="@+id/signwithemail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="15sp"
            android:text="@string/sign_with_email"
            android:background="@drawable/purple_btn"
            android:textColor="@color/white"
            android:drawableStart="@drawable/baseline_email_24"/>

        <Button
            android:id="@+id/signwithphone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_with_phone"
            android:layout_marginTop="20sp"
            android:padding="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/purple_btn"
            android:textColor="@color/white"
            android:drawableStart="@drawable/baseline_phone_24"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dhaa"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/purple"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:background="@drawable/purple_btn"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="15dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>