<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:paddingTop="30dp"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/cuate" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/sua"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/customer_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/hollow"/>

        <Button
            android:id="@+id/chef_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/hollow"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/chef"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/delivery_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/hollow"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>