<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chefFoodPanel.chef_postDish">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:paddingTop="30dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:padding="15dp"
            android:text="Add Food Details"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/camerabhapebtn"
        android:id="@+id/image_upload"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_camera_alt_24"
        android:layout_gravity="center"
        android:contentDescription="@string/image_upload" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/linear_layout"
        android:layout_gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/textView"
            android:padding="8dp"
            android:text="Choose Dish"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

        <Spinner
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/dishes"
            android:layout_marginStart="12dp"
            android:entries="@array/DishName" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:textSize="18sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/quantity"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:textSize="18sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"
            android:textSize="18sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/post"
        android:background="@drawable/hollow"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/price"
        android:text="@string/post"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="18sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


</LinearLayout>